--- a/README
+++ b/README
@@ -5,9 +5,8 @@ Version 1.0
 
 fascia-psu.sourceforge.net
 
-George M. Slota <gms5016@cse.psu.edu>
+George M. Slota <gslota@psu.edu>
 Kamesh Madduri  <madduri@cse.psu.edu>
-
 Computer Science and Engineering
 The Pennsylvania State University
 
