--- a/README
+++ b/README
@@ -1,13 +1,17 @@
 
 FASCIA: Parallel Subgraph Counting
+----------------------------------
 
 Version 1.0
-
 fascia-psu.sourceforge.net
 
 George M. Slota <gslota@psu.edu>
 Kamesh Madduri  <madduri@cse.psu.edu>
+
 Computer Science and Engineering
 The Pennsylvania State University
 
+------------
+
+Please see index.html for build instructions and usage examples.
 
